Improve NFT code

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -946,6 +946,7 @@
           background: $light-color;
           border-radius: .5rem;
           box-shadow: 0 .1rem .4rem rgba($dark-color, .1);
+          color: $dark-color;
           font-size: 1.6rem;
           height: 2.6rem;
           object-fit: cover;
