--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -296,6 +296,16 @@
       font-size: 1.2rem;
     }
 
+    .widget-loading {
+      align-items: center;
+      background: lighten($bg-color, 3%);
+      border-radius: .5rem;
+      display: flex;
+      height: 2.6rem;
+      justify-content: center;
+      width: 2.6rem;
+    }
+
     .action-icon {
       position: absolute;
       right: 1rem;
