--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -125,25 +125,25 @@
       &.ENS {
         --badge-primary-color: #5298FF;
         background: lighten(#5298FF, 30%);
-        border-color: lighten(#5298FF, 26%);
+        border-color: lighten(#5298FF, 28%);
       }
 
       &.lens {
         --badge-primary-color: #6bc674;
         background: lighten(#6bc674, 35%);
-        border-color: lighten(#6bc674, 31%);
+        border-color: lighten(#6bc674, 33%);
       }
 
       &.farcaster {
         --badge-primary-color: #8465CB;
         background: lighten(#8465CB, 35%);
-        border-color: lighten(#8465CB, 31%);
+        border-color: lighten(#8465CB, 33%);
       }
 
       &.dotbit {
         --badge-primary-color: #0e7dff;
         background: lighten(#0e7dff, 45%);
-        border-color: lighten(#0e7dff, 41%);
+        border-color: lighten(#0e7dff, 43%);
       }
 
       &.nextid {
@@ -730,12 +730,14 @@
     border-radius: .8rem;
     display: flex;
     height: 80vh;
+    gap: 2rem;
     max-width: $size-xl;
     width: 100%;
 
     @media screen and (max-width: $size-md) {
       flex-direction: column;
       height: 98vh;
+      gap: .5rem;
       overflow-y: auto;
       width: 98vw;
 
@@ -755,7 +757,7 @@
       align-items: center;
 
       .preview-content {
-        height: 24rem;
+        height: 28rem;
         width: 20rem;
         overflow: hidden auto;
       }
@@ -821,8 +823,9 @@
       }
 
       .collection-name {
-        font-size: .65rem;
+        font-size: .7rem;
         font-weight: 700;
+        letter-spacing: -0.05em;
         line-height: 1.2rem;
       }
     }
@@ -832,6 +835,7 @@
       font-weight: 900;
       letter-spacing: -.05em;
       line-height: 1.25;
+      margin-bottom: 1rem;
       word-break: break-all;
     }
 
@@ -847,17 +851,19 @@
       .traits-card {
         background: $bg-color;
         border: .05rem solid rgba($dark-color, 0.01);
-        box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
         border-radius: .4rem;
+        box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
         color: $dark-color;
-        min-width: 3.5rem;
+        flex: 1 1 auto;
+        min-width: 5rem;
+        max-width: calc(50% - .25rem);
         text-transform: uppercase;
-        padding: .2rem .4rem;
+        padding: .4rem .6rem;
 
         .trait-type {
           color: $gray-color-dark;
-          font-size: .5rem;
-          line-height: 2;
+          font-size: .6rem;
+          line-height: 1.5;
         }
 
         .trait-value {
@@ -866,7 +872,7 @@
           line-height: 1.5;
         }
 
-        .trait_percentage {
+        .trait-percentage {
           font-weight: 500;
           font-size: .3rem;
           line-height: 1;
@@ -1001,6 +1007,7 @@
       .collection-name {
         font-size: .8rem;
         font-weight: 700;
+        letter-spacing: -.05em;
       }
     }
 
