--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -52,6 +52,16 @@
       width: 9rem;
       object-fit: cover;
     }
+
+    @media screen and (max-width: $size-md) {
+      height: 6rem;
+      width: 6rem;
+
+      .avatar {
+        height: 6rem;
+        width: 6rem;
+      }
+    }
   }
 
   .profile-name {
@@ -1072,8 +1082,9 @@
         }
 
         .nft-name {
-          font-size: .65rem;
+          font-size: .75rem;
           font-weight: 700;
+          letter-spacing: -.05em;
         }
       }
     }
