Update NFT modal

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -768,7 +768,7 @@
 
       .preview-content {
         height: 28rem;
-        width: 20rem;
+        width: 22rem;
         overflow: hidden auto;
       }
     }
@@ -813,10 +813,50 @@
     width: 100%;
     word-break: break-word;
 
+    .panel-widget {
+      margin: 2rem 0;
+  
+      &:last-child {
+        margin-bottom: 0;
+      }
+  
+      .panel-widget-title {
+        font-size: .8rem;
+        font-weight: 900;
+        line-height: 1.2rem;
+        margin-bottom: .5rem;
+        text-transform: uppercase;
+      }
+  
+      .panel-widget-list {
+        background: $bg-color;
+        border: .05rem solid rgba($dark-color, 0.01);
+        border-radius: .4rem;
+        box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
+        color: $dark-color;
+        margin: 1rem 0;
+
+        .widget-list-item {
+          display: flex;
+          justify-content: space-between;
+          padding: .6rem;
+          
+          .list-item-right {
+            font-size: .8rem;
+            font-weight: 900;
+            text-transform: uppercase;
+          }
+
+          &:not(:first-child) {
+            border-top: .05rem solid rgba($dark-color, 0.025);
+          }
+        }
+      }
+    }
+
     .collection-title {
       align-items: flex-start;
       display: flex;
-      padding-bottom: .5rem;
 
       .collection-logo {
         flex: 0 0 1.2rem;
@@ -833,7 +873,7 @@
       }
 
       .collection-name {
-        font-size: .7rem;
+        font-size: .8rem;
         font-weight: 700;
         letter-spacing: -0.05em;
         line-height: 1.2rem;
@@ -841,7 +881,6 @@
     }
 
     .nft-header-name {
-      font-size: 1.2rem;
       font-weight: 900;
       letter-spacing: -.05em;
       line-height: 1.25;
@@ -849,8 +888,27 @@
       word-break: break-all;
     }
 
+    .nft-header-description {
+      font-size: .8rem;
+    }
+
     .nft-header-actions {
       margin-top: .5rem;
+    }
+
+    .nft-header-logo {
+      border-radius: .8rem;
+      box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+      font-size: 1rem;
+      height: 4rem;
+      width: 4rem;
+
+      .img-responsive {
+        border-radius: .8rem;
+        height: 4rem;
+        object-fit: cover;
+        width: 4rem;
+      }
     }
 
     .traits-cards {
@@ -866,7 +924,6 @@
         color: $dark-color;
         flex: 1 1 auto;
         min-width: 5rem;
-        max-width: calc(50% - .25rem);
         text-transform: uppercase;
         padding: .4rem .6rem;
 
@@ -888,22 +945,6 @@
           line-height: 1;
         }
       }
-    }
-  }
-
-  .panel-widget {
-    margin: 2rem 0;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-
-    .panel-widget-title {
-      font-size: .7rem;
-      font-weight: 900;
-      line-height: 1.2rem;
-      margin-bottom: .5rem;
-      text-transform: uppercase;
     }
   }
 }
@@ -1051,7 +1092,7 @@
           background: lighten($bg-color, 2%);
         }
 
-        .img-container {
+        .nft-img-container {
           margin-bottom: .5rem;
           position: relative;
           overflow: hidden;
@@ -1075,16 +1116,19 @@
           }
         }
 
-        .collection-name {
+        .nft-collection-name {
           color: $gray-color-dark;
           font-size: .5rem;
-
         }
 
         .nft-name {
           font-size: .75rem;
           font-weight: 700;
           letter-spacing: -.05em;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
         }
       }
     }
