--- a/styles/_panel.scss
+++ b/styles/_panel.scss
@@ -11,13 +11,12 @@
 
   .social-feeds-list {
     max-width: 100%;
-    margin-top: 1rem;
     max-height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .5rem;
 
     .feed-item-box {
       display: flex;
@@ -43,27 +42,41 @@
       }
 
       .feed-item {
+        width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: .4rem;
         max-width: 90%;
 
         .feed-item-header {
           width: 100%;
           display: flex;
           align-items: center;
-          gap: 10px;
+          justify-content: space-between;
+          gap: .2rem;
+
+          .action-icon {
+            position: relative;
+            top: 0;
+            right: 0;
+            cursor: pointer;
+            opacity: .6;
+
+            &:hover {
+              opacity: 1;
+            }
+
+          }
 
           .feed-type-intro {
             display: flex;
             align-items: center;
             font-weight: 400;
-            font-size: 14px;
-            line-height: 22px;
+            font-size: .7rem;
 
             .strong {
               font-weight: 900;
-              margin: 0 4px;
+              margin: 0 .25rem;
             }
           }
         }
@@ -71,26 +84,43 @@
         .feed-item-main {
           display: flex;
           align-items: center;
-          gap: 10px;
+          gap: .5rem;
 
           .feed-nft-img {
             position: relative;
-            width: 40px;
-            height: 40px;
-            min-width: 40px;
-            min-height: 40px;
-            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
-            border-radius: 12px;
+            width: 2.25rem;
+            height: 2.25rem;
+            box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
+            border-radius: 0.6rem;
 
-            img {
-              box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
-              border-radius: 12px;
+            .img-placeholder {
+              width: 100%;
+              height: 100%;
+              box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
+              border-radius: .6rem;
+
+              .initial {
+                font-size: 1em;
+              }
             }
+
+            .img-container {
+              width: 100%;
+              height: 100%;
+
+              .img-responsive {
+                width: 100%;
+                height: 100%;
+                box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
+                border-radius: .6rem;
+              }
+            }
+
           }
 
           .feed-swap-img {
             width: 24px;
-            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
             border-radius: 12px;
             background: transparent;
           }
@@ -98,11 +128,11 @@
           .feed-nft-info {
             display: flex;
             flex-direction: column;
+            max-width: 85%;
 
             .nft-title {
               font-weight: 700;
-              font-size: 14px;
-              line-height: 22px;
+              font-size: .7rem;
               display: -webkit-box;
               -webkit-box-orient: vertical;
               -webkit-line-clamp: 1;
