--- a/styles/_panel.scss
+++ b/styles/_panel.scss
@@ -90,7 +90,6 @@
             position: relative;
             width: 2.25rem;
             height: 2.25rem;
-            box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
             border-radius: 0.6rem;
 
             .img-placeholder {
@@ -120,9 +119,31 @@
 
           .feed-swap-img {
             width: 24px;
-            box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
             border-radius: 12px;
             background: transparent;
+
+            .img-placeholder {
+              width: 100%;
+              height: 100%;
+              box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
+              border-radius: .6rem;
+
+              .initial {
+                font-size: 1em;
+              }
+            }
+
+            .img-container {
+              width: 100%;
+              height: 100%;
+
+              .img-responsive {
+                width: 100%;
+                height: 100%;
+                box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
+                border-radius: .6rem;
+              }
+            }
           }
 
           .feed-nft-info {
@@ -160,10 +181,10 @@
     }
 
     .feed-timestamp {
-      width: fit-content;
-      margin-left: 34px;
-      opacity: .5;
-      margin-top: 10px;
+      color: #ababab;
+      font-size: 0.6rem;
+      margin-top: 0.5rem;
+      margin-left: 1.25rem;
     }
   }
 }
