chore: social && comment card

--- a/styles/_panel.scss
+++ b/styles/_panel.scss
@@ -152,6 +152,7 @@
             max-width: 85%;
 
             .nft-title {
+              width: 100%;
               font-weight: 700;
               font-size: .7rem;
               display: -webkit-box;
