--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -417,6 +417,7 @@
       font-weight: 500;
       margin-bottom: 0;
       text-decoration: none;
+
     }
   }
 
@@ -426,9 +427,18 @@
     border-color: lighten($bg-color, 3%);
     position: relative;
 
+
+    .profile-widget-title {
+      .label {
+        background: #5298FF;
+        box-shadow: inset 0 0 .25rem rgba($dark-color, .15), 0 .1rem .4rem rgba(#5298FF, .5);
+        color: #fff;
+      }
+    }
+
     &.active {
       box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
-      
+
       .collection-switcher {
         box-shadow: 0 .4rem .4rem -.2rem rgba($dark-color, .1);
       }
@@ -597,9 +607,9 @@
           object-fit: contain;
           width: 100%;
 
-          & + .rss-item-title {
+          &+.rss-item-title {
             font-size: .7rem;
-          }           
+          }
         }
       }
     }
@@ -633,10 +643,10 @@
       flex-wrap: wrap;
       gap: .5rem;
       margin-top: .5rem;
-      
+
       .trait-item {
         align-items: center;
-        background: linear-gradient(90.47deg,#efefef 2%,#fcfcfc 32%,#cdcdcd 98%);
+        background: linear-gradient(90.47deg, #efefef 2%, #fcfcfc 32%, #cdcdcd 98%);
         border-radius: 1rem;
         box-shadow: inset 0 0 0 .1rem rgba($light-color, .2), inset 0 0 .25rem rgba($dark-color, .15), 0 0 .4rem rgba($dark-color, .1);
         display: flex;
@@ -644,22 +654,22 @@
         padding: .05rem;
 
         &.action_tier_legendary {
-          background: linear-gradient(124.2deg,#d6fdff 8%,#bad1ff 34%,#7cd4f0 74%,#b4fffa 95%);
+          background: linear-gradient(124.2deg, #d6fdff 8%, #bad1ff 34%, #7cd4f0 74%, #b4fffa 95%);
           order: -12;
         }
 
         &.action_tier_epic {
-          background: linear-gradient(113.06deg,#ffd6d6 19%,#ffbaf8 34%,#9593ff 85%);
+          background: linear-gradient(113.06deg, #ffd6d6 19%, #ffbaf8 34%, #9593ff 85%);
           order: -9;
         }
 
         &.action_tier_rare {
-          background: linear-gradient(117.25deg,#f1cc9c 20%,#f2a94e 42%,#f07c7c 65%,#fbade5 96%);
+          background: linear-gradient(117.25deg, #f1cc9c 20%, #f2a94e 42%, #f07c7c 65%, #fbade5 96%);
           order: -6;
         }
 
         &.action_tier_uncommon {
-          background: linear-gradient(90.47deg,#e9f3ad 2%,#c6d390 32%,#7cbc55 98%);
+          background: linear-gradient(90.47deg, #e9f3ad 2%, #c6d390 32%, #7cbc55 98%);
           order: -3;
         }
 
@@ -668,7 +678,7 @@
         }
 
         &.degen_score {
-          background: linear-gradient(113.06deg,#ffbaf8 1%,#ffbaf8 25%,#a855f7 85%);
+          background: linear-gradient(113.06deg, #ffbaf8 1%, #ffbaf8 25%, #a855f7 85%);
           display: none;
           order: -15;
 
@@ -756,6 +766,7 @@
       }
 
       .preview-image {
+
         .img-responsive,
         .video-responsive {
           max-width: 98vw;
@@ -815,11 +826,11 @@
 
     .panel-widget {
       margin: 2rem 0;
-  
+
       &:last-child {
         margin-bottom: 0;
       }
-  
+
       .panel-widget-title {
         font-size: .8rem;
         font-weight: 900;
@@ -827,7 +838,7 @@
         margin-bottom: .5rem;
         text-transform: uppercase;
       }
-  
+
       .panel-widget-list {
         background: $bg-color;
         border: .05rem solid rgba($dark-color, 0.01);
@@ -840,7 +851,7 @@
           display: flex;
           justify-content: space-between;
           padding: .6rem;
-          
+
           .list-item-right {
             font-size: .8rem;
             font-weight: 900;
