Modify social feeds component directory

--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -34,10 +34,10 @@
 @import "spectre/utilities";
 
 // Components
-@import "panel";
 @import "graph";
 @import "profile";
 @import "search";
+@import "social";
 @import "share";
 
 // Variables
