--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -30,6 +30,7 @@
         transition: transform .15s ease-in-out;
         font-size: 1rem;
         cursor: pointer;
+        
       }
 
       .feed-item {
@@ -194,3 +195,109 @@
 
 
 // Social Feeds
+.widget-feeds-container {
+  overflow-y: auto;
+  padding: 0 1rem;
+
+  .feed-item {
+    align-items: flex-start;
+    display: flex;
+    font-size: .75rem;
+    margin-bottom: 1rem;
+
+    .feed-item-icon {
+      align-items: center;
+      background: lighten($bg-color, 3%);
+      border-radius: 50%;
+      display: flex;
+      flex: 0 0 2rem;
+      font-size: 1rem;
+      height: 2rem;
+      justify-content: center;
+      margin-right: 1rem;
+      position: relative;
+      width: 2rem;
+
+      .feed-icon-platform {
+        align-items: center;
+        background: $bg-color;
+        border-radius: 50%;
+        bottom: -.4rem;
+        box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .25), 0 .1rem .2rem rgba($dark-color, .05);
+        flex: 0 0;
+        display: flex;
+        height: 1.2rem;
+        padding: .2rem;
+        position: absolute;
+        right: -.4rem;
+        width: 1.2rem;
+        z-index: 1;
+
+        &.farcaster {
+          background: lighten(#8465CB, 30%);
+          border-color: lighten(#8465CB, 27%);
+        }
+
+        &.lens {
+          background: lighten(#6bc674, 30%);
+          border-color: lighten(#6bc674, 27%);
+        }
+      }
+    }
+
+    .feed-item-content {
+      flex:  1 1 auto;
+      width: 100%;
+    }
+
+    .feed-item-header {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .feed-item-body {
+      &:focus,
+      &:hover {
+        text-decoration: none;
+      }
+    }
+
+    .feed-timestamp {
+      color: $gray-color;
+      font-size: .7rem;
+    }
+
+    .feed-content {
+      font-size: .8rem;
+      line-height: 1.5;
+
+      &.media-gallery {
+        display: flex;
+        flex-wrap: nowrap;
+        gap: .5rem;
+        overflow-x: auto;
+
+        .feed-content-img {
+          max-width: 10rem;
+        }
+      }
+
+      .feed-content-img {
+        margin: .5rem 0;
+        max-width: 16rem;
+  
+        .img-responsive {
+          border-radius: .4rem;
+          box-shadow: 0 .1rem .2rem rgba($dark-color, .15);
+        }
+      }
+
+      .feed-content-target {
+        border: .05rem solid $border-color;
+        border-radius: .4rem;
+        margin-top: .75rem;
+        padding: .75rem;
+      }
+    }
+  }
+}
