--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -30,7 +30,7 @@
         transition: transform .15s ease-in-out;
         font-size: 1rem;
         cursor: pointer;
-        
+
       }
 
       .feed-item {
@@ -61,18 +61,19 @@
           }
 
           .feed-type-intro {
-              width: 100%;
-              max-width: 90%;
-              font-size: .7rem;
-              display: -webkit-box;
-              -webkit-box-orient: vertical;
-              -webkit-line-clamp: 1;
-              overflow: hidden;
+            width: 100%;
+            max-width: 90%;
+            font-size: .7rem;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 1;
+            overflow: hidden;
+
             strong {
               font-weight: 900;
               margin: 0 .25rem;
             }
-          
+
           }
         }
 
@@ -234,6 +235,7 @@
         width: 1.2rem;
         z-index: 1;
 
+        // platforms
         &.farcaster {
           background: lighten(#8465CB, 30%);
           border-color: lighten(#8465CB, 27%);
@@ -243,11 +245,22 @@
           background: lighten(#6bc674, 30%);
           border-color: lighten(#6bc674, 27%);
         }
+
+        // networks
+        &.ethereum {
+          background: lighten(#5298FF, 30%);
+          border-color: lighten(#5298FF, 27%);
+        }
+
+        &.polygon {
+          background: lighten(#8465CB, 30%);
+          border-color: lighten(#8465CB, 27%);
+        }
       }
     }
 
     .feed-item-content {
-      flex:  1 1 auto;
+      flex: 1 1 auto;
       width: 100%;
     }
 
@@ -257,6 +270,7 @@
     }
 
     .feed-item-body {
+
       &:focus,
       &:hover {
         text-decoration: none;
@@ -286,7 +300,7 @@
       .feed-content-img {
         margin: .5rem 0;
         max-width: 16rem;
-  
+
         .img-responsive {
           border-radius: .4rem;
           box-shadow: 0 .1rem .2rem rgba($dark-color, .15);
