--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -198,7 +198,7 @@
 // Social Feeds
 .widget-feeds-container {
   overflow-y: auto;
-  padding: 0 1rem;
+  padding: 1rem;
 
   .feed-item {
     align-items: flex-start;
@@ -267,6 +267,7 @@
     .feed-item-header {
       display: flex;
       justify-content: space-between;
+      margin-bottom: .2rem;
     }
 
     .feed-item-body {
@@ -277,23 +278,34 @@
       }
     }
 
-    .feed-item-action{
+    .feed-item-action {
       display: flex;
       align-items: center;
       gap: .5rem;
+
       .feed-timestamp {
         color: $gray-color;
         font-size: .7rem;
       }
-      .feed-external{
-        
-      }
     }
-   
+
+    .flex {
+      display: flex;
+      align-items: center;
+
+    }
 
     .feed-content {
       font-size: .8rem;
       line-height: 1.5;
+      .feed-content-header{
+        display: flex;
+        align-items: center;
+        margin-bottom: .5rem;
+      }
+      strong {
+        margin: 0 .5rem;
+      }
 
       &.media-gallery {
         display: flex;
@@ -304,6 +316,7 @@
         .feed-content-img {
           max-width: 10rem;
         }
+
       }
 
       .feed-content-img {
@@ -316,6 +329,21 @@
           height: 100%;
           max-height: 16rem;
           width: auto;
+        }
+      }
+
+      .feed-content-token-img {
+        margin-right: .2rem;
+        height: 1rem;
+        width: 1rem;
+        .img-responsive {
+          border-radius: 100%;
+          box-shadow: 0 .1rem .2rem rgba($dark-color, .15);
+          height: 100%;
+          width: 100%;
+        }
+        .img-placeholder{
+          height: 100%;
         }
       }
 
