--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -76,6 +76,7 @@ $layout-spacing-lg: $unit-4 !default;
 $border-radius: .4rem !default;
 $border-radius-lg: .6rem !default;
 $border-width: $unit-h !default;
+$border-width-sm: $unit-o !default;
 $border-width-lg: $unit-h !default;
 $control-size: $unit-9 !default;
 $control-size-sm: $unit-7 !default;
