--- a/styles/spectre/utilities/_divider.scss
+++ b/styles/spectre/utilities/_divider.scss
@@ -16,7 +16,7 @@
 }
 
 .divider {
-  border-top: $border-width solid $border-color;
+  border-top: $border-width-sm solid $border-color;
   height: $border-width;
   margin: $unit-2 0;
 
