--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -1,200 +1,3 @@
-.feeds-container {
-  flex: 1 1;
-  height: 100%;
-  overflow: hidden;
-
-  .social-feeds-title {
-    font-size: .7rem;
-    font-weight: 700;
-    padding: 1rem 0;
-  }
-
-  .social-feeds-list {
-    max-width: 100%;
-    max-height: 80vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-
-    .feed-item-box {
-      display: flex;
-      width: 100%;
-      margin-top: 1rem;
-      align-items: flex-start;
-      gap: 10px;
-
-      .feed-badge-emoji {
-        margin-left: .2rem;
-        transition: transform .15s ease-in-out;
-        font-size: 1rem;
-        cursor: pointer;
-
-      }
-
-      .feed-item {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: .4rem;
-        max-width: 90%;
-
-        .feed-item-header {
-          width: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          gap: .2rem;
-
-          .action-icon {
-            position: relative;
-            top: 0;
-            right: 0;
-            cursor: pointer;
-            opacity: .6;
-
-            &:hover {
-              opacity: 1;
-            }
-
-          }
-
-          .feed-type-intro {
-            width: 100%;
-            max-width: 90%;
-            font-size: .7rem;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 1;
-            overflow: hidden;
-
-            strong {
-              font-weight: 900;
-              margin: 0 .25rem;
-            }
-
-          }
-        }
-
-        .feed-item-main {
-          display: flex;
-          align-items: center;
-          gap: .5rem;
-
-          .feed-nft-img {
-            position: relative;
-            width: 2.25rem;
-            height: 2.25rem;
-            border-radius: 0.6rem;
-
-            .img-placeholder {
-              width: 100%;
-              height: 100%;
-              box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
-              border-radius: .6rem;
-
-              .initial {
-                font-size: 1em;
-              }
-            }
-
-            .img-container {
-              width: 100%;
-              height: 100%;
-
-              .img-responsive {
-                width: 100%;
-                height: 100%;
-                box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
-                border-radius: .6rem;
-              }
-            }
-
-          }
-
-          .feed-swap-img {
-            width: 1.5rem;
-            border-radius: 12px;
-            background: transparent;
-
-            .img-placeholder {
-              width: 100%;
-              height: 100%;
-              box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
-              border-radius: .6rem;
-
-              .initial {
-                font-size: 1em;
-              }
-            }
-
-            .img-container {
-              width: 100%;
-              height: 100%;
-
-              .img-responsive {
-                width: 100%;
-                height: 100%;
-                box-shadow: 0px .2rem 1.2rem rgba(0, 0, 0, 0.15);
-                border-radius: .6rem;
-              }
-            }
-          }
-
-          .feed-nft-info {
-            display: flex;
-            flex-direction: column;
-            max-width: 85%;
-
-            .nft-title {
-              width: 100%;
-              font-weight: 700;
-              font-size: .7rem;
-              display: -webkit-box;
-              -webkit-box-orient: vertical;
-              -webkit-line-clamp: 1;
-              overflow: hidden;
-            }
-
-            .nft-subtitle {
-              font-weight: 400;
-              display: -webkit-box;
-              -webkit-box-orient: vertical;
-              -webkit-line-clamp: 2;
-              overflow: hidden;
-            }
-
-            .nft-collection-title {
-              font-weight: 400;
-              font-size: 12px;
-              line-height: 1rem;
-              color: #121212;
-              opacity: 0.5;
-            }
-          }
-        }
-      }
-    }
-
-    .feed-timestamp {
-      color: #ababab;
-      font-size: 0.6rem;
-      margin-top: 0.5rem;
-      margin-left: 1.25rem;
-    }
-  }
-}
-
-.feeds-title {
-  font-weight: 900;
-  font-size: 14px;
-  line-height: 1.43;
-  text-transform: uppercase;
-}
-
-
-
 // Social Feeds
 .widget-feeds-container {
   overflow-y: auto;
@@ -205,9 +8,26 @@
     display: flex;
     font-size: .75rem;
     height: auto;
-    margin-bottom: 1.5rem;
     padding: 0;
+    position: relative;
     width: 100%;
+    z-index: 0;
+
+    &:not(:last-child) {
+      margin-bottom: .5rem;
+      padding-bottom: .5rem;
+    }
+
+    &::after {
+      border-left: .05rem solid $border-color;
+      bottom: -.5rem;
+      content: "";
+      display: flex;
+      left: 1rem;
+      position: absolute;
+      top: 2.5rem;
+      width: .05rem;
+    }
 
     .feed-item-icon {
       align-items: center;
@@ -285,21 +105,22 @@
     }
 
     .feed-content {
+      align-items: center;
+      display: flex;
       font-size: .8rem;
       line-height: 1.5;
       margin: .25rem 0;
 
-      .feed-content-target {
+      .feed-target {
         border: .05rem solid $border-color;
         border-radius: .4rem;
+        font-size: .7rem;
         margin-top: .75rem;
+        min-width: 10rem;
         padding: .75rem;
         transition: all .25s ease-in-out;
-      }
-
-      .feed-content-header {
-        display: flex;
-        align-items: center;
+        word-wrap: break-word;
+        width: 75%;
       }
 
       &.media-gallery {
@@ -319,8 +140,10 @@
       .feed-content-img {
         margin: .25rem 0;
         max-width: 16rem;
+        min-height: 4rem;
 
         .img-responsive {
+          background: $bg-color;
           border-radius: .4rem;
           box-shadow: 0 .1rem .2rem rgba($dark-color, .15);
           height: 100%;
@@ -329,19 +152,20 @@
         }
       }
 
-      .feed-content-token-img {
-        margin-right: .2rem;
-        height: 1rem;
-        width: 1rem;
+      .feed-content-token-icon {
+        display: inline-flex;
+        height: 1.2rem;
+        margin: 0 .2rem;
+        width: 1.2rem;
 
         .img-responsive {
-          border-radius: 100%;
-          box-shadow: 0 .1rem .2rem rgba($dark-color, .15);
+          border-radius: 50%;
+          box-shadow: none;
           height: 100%;
           width: 100%;
         }
 
-        .img-placeholder{
+        .img-placeholder {
           height: 100%;
         }
       }
@@ -352,7 +176,7 @@
       &:hover {
         text-decoration: none;
 
-        .feed-content-target {
+        .feed-target {
           border-color: darken($border-color, 2%);
           box-shadow: 0 .1rem .6rem rgba($dark-color, .05);
         }
