Update network icons and colors

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -337,7 +337,7 @@
     }
 
     .icon {
-      color: #5298FF;
+      color: #3741ba;
       flex: 0 0 .8rem;
       height: 1rem;
       margin-right: .2rem;
