Improve feed logic

--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -102,7 +102,7 @@
         border: .05rem solid $border-color;
         border-radius: .4rem;
         font-size: .7rem;
-        margin-top: .5rem;
+        margin: .5rem 0;
         min-width: 10rem;
         padding: .75rem;
         transition: all .25s ease-in-out;
