--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -148,21 +148,27 @@
         }
       }
 
-      .feed-content-token-icon {
+      .feed-token {
+        align-items: center;
+        background: lighten($bg-color, 8%);
+        border: .05rem solid $border-color;
+        border-radius: .2rem;
         display: inline-flex;
+        gap: .2rem;
         height: 1.2rem;
-        margin: 0 .2rem;
-        width: 1.2rem;
+        margin: 0 .4rem;
+        padding: .1rem .2rem;
 
-        .img-responsive {
+        .feed-token-icon {
           border-radius: 50%;
-          box-shadow: none;
-          height: 100%;
-          width: 100%;
+          flex: 0 0;
+          height: 1rem;
+          margin-left: -.1rem;
+          width: 1rem;
         }
 
-        .img-placeholder {
-          height: 100%;
+        .feed-token-symbol {
+          font-size: 90%;
         }
       }
     }
