--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -200,6 +200,7 @@
         height: 1.2rem;
         margin: .05rem 0 .05rem .2rem;
         padding: .1rem .2rem;
+        text-overflow: ellipsis;
 
         .feed-token-value {
           font-weight: 600;
