--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -198,7 +198,7 @@
         flex-wrap: nowrap;
         gap: .2rem;
         height: 1.2rem;
-        margin: .05rem 0 .05rem .2rem;
+        margin: .05rem 0;
         padding: .1rem .2rem;
         text-overflow: ellipsis;
 
