--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -859,6 +859,10 @@
     .panel-widget {
       margin: 2rem 0;
 
+      &:first-child {
+        margin-top: 0;
+      }
+
       &:last-child {
         margin-bottom: 0;
       }
