--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -846,6 +846,40 @@
       height: 12rem;
       width: 12rem;
     }
+
+    .preview-network {
+      align-items: center;
+      background: $dark-color;
+      border-radius: .5rem;
+      bottom: .5rem;
+      display: flex;
+      height: 1.5rem;
+      left: .5rem;
+      opacity: .25;
+      padding: .25rem;
+      position: absolute;
+      transition: all .25s ease-in-out;
+
+      &:focus,
+      &:hover {
+        opacity: .75;
+
+        .preview-network-name {
+          display: inline-flex;
+        }
+      }
+
+      .preview-network-icon {
+        height: 1rem;
+        width: 1rem;
+      }
+
+      .preview-network-name {
+        color: #fff;
+        display: none;
+        padding: 0 .25rem;
+      }
+    }
   }
 
   .preview-content {
