--- a/styles/_social.scss
+++ b/styles/_social.scss
@@ -205,15 +205,24 @@
         }
 
         .feed-token-icon {
-          border-radius: 50%;
-          flex: 0 0;
+          border-radius: .25rem;
+          flex: 0 0 1rem;
           height: 1rem;
           margin-left: -.1rem;
           width: 1rem;
+
+          .img-responsive {
+            border-radius: .25rem;
+            height: 1rem;
+            object-fit: cover;
+            width: 1rem;
+          }
         }
 
-        .feed-token-symbol {
-          font-size: 90%;
+        .feed-token-meta {
+          color: $gray-color-dark;
+          font-size: 85%;
+          line-height: 1.2rem;
         }
       }
     }
