--- a/styles/spectre/_forms.scss
+++ b/styles/spectre/_forms.scss
@@ -116,7 +116,8 @@ textarea.form-input {
 // Form element: Select
 .form-select {
   appearance: none;
-  border: $border-width solid $dark-color;
+  border: $border-width solid transparent;
+  background-color: $bg-color;
   border-radius: $border-radius;
   color: inherit;
   font-size: $font-size;
@@ -127,9 +128,9 @@ textarea.form-input {
   vertical-align: middle;
   width: 100%;
   background: $bg-color-light; 
+  
   &:focus {
-    @include control-shadow();
-    border-color: $primary-color;
+    @include control-shadow($border-color);
   }
   &::-ms-expand {
     display: none;
@@ -159,7 +160,7 @@ textarea.form-input {
     }
   }
   &:not([multiple]):not([size]) {
-    background: $bg-color-light url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right .35rem center / .4rem .5rem;
+    background: $bg-color url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right .35rem center / .4rem .5rem;
     padding-right: $control-icon-size + $control-padding-x;
   }
 }
