--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -423,7 +423,7 @@
     .profile-widget-title {
       align-items: center;
       display: flex;
-      font-size: .7rem;
+      font-size: .75rem;
       font-weight: 500;
       margin-bottom: 0;
       text-decoration: none;
@@ -436,14 +436,6 @@
     border-color: lighten($bg-color, 3%);
     overflow: hidden;
     position: relative;
-
-    .profile-widget-title {
-      .label {
-        background: #5298FF;
-        box-shadow: inset 0 0 .25rem rgba($dark-color, .15), 0 .1rem .4rem rgba(#5298FF, .5);
-        color: #fff;
-      }
-    }
 
     &.active {
       box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
@@ -507,6 +499,192 @@
         }
       }
     }
+
+    .collection-switcher {
+      background: $light-color;
+      user-select: none;
+      margin: 0 -1rem;
+      overflow: hidden;
+    
+      .collection-list {
+        display: flex;
+        gap: .1rem;
+        overflow: auto hidden;
+        padding: .25rem 1rem;
+    
+        &::-webkit-scrollbar {
+          display: none;
+        }
+    
+        .collection-item {
+          background: #fff;
+          border-radius: .6rem;
+          cursor: pointer;
+          flex: 0 0;
+          height: 3.1rem;
+          padding: .25rem;
+          transition: all .25s ease-in-out;
+          width: 3.1rem;
+    
+          &::after {
+            bottom: auto;
+            top: 100%;
+            transform: translate(-50%, -$unit-2);
+          }
+    
+          &:focus,
+          &:hover {
+            background: lighten($bg-color, 2%);
+    
+            &::after {
+              transform: translate(-50%, $unit-1);
+            }
+          }
+    
+          &.active {
+            background: $bg-color;
+    
+            .img-responsive {
+              box-shadow: 0 .1rem .4rem rgba($dark-color, .25);
+            }
+          }
+    
+          .collection-img {
+            border-radius: .5rem;
+            height: 2.6rem;
+            width: 2.6rem;
+    
+            &.collection-img-more {
+              .img-responsive {
+                padding: .5rem;
+              }
+            }
+    
+            .img-responsive {
+              background: $light-color;
+              border-radius: .5rem;
+              box-shadow: 0 .1rem .4rem rgba($dark-color, .1);
+              color: $dark-color;
+              font-size: 1.6rem;
+              height: 2.6rem;
+              object-fit: cover;
+              width: 2.6rem;
+            }
+          }
+        }
+      }
+    }
+    
+    .nft-collection {
+      position: relative;
+      flex: 1 1;
+      height: 100%;
+      overflow-y: auto;
+      padding: 0 .5rem;
+    
+      .nft-collection-list {
+        .nft-collection-item {
+          margin-top: .5rem;
+        }
+    
+        .collection-title {
+          align-items: center;
+          display: flex;
+          padding: 1rem 0 .5rem 0;
+    
+          .collection-logo {
+            flex: 0 0 1.2rem;
+            margin-right: .25rem;
+    
+            .img-responsive {
+              border-radius: .4rem;
+              box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+              font-size: 1rem;
+              height: 1.2rem;
+              object-fit: cover;
+              width: 1.2rem;
+            }
+          }
+    
+          .collection-name {
+            font-size: .8rem;
+            font-weight: 700;
+            letter-spacing: -.025em;
+          }
+        }
+    
+        .nft-list {
+          position: relative;
+          display: flex;
+          flex-wrap: wrap;
+          margin: 0 -.5rem 1rem -.5rem;
+    
+          .nft-container {
+            flex: 0 0 33.3333%;
+            width: 33.3333%;
+            min-width: 8rem;
+    
+            @media screen and (max-width: $size-md) {
+              flex: 0 0 50%;
+            }
+          }
+    
+          .nft-item {
+            border-radius: .75rem;
+            padding: .5rem;
+            transition: all .25s ease-in-out;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+    
+            &:focus,
+            &:hover {
+              background: lighten($bg-color, 2%);
+            }
+    
+            .nft-img-container {
+              margin-bottom: .5rem;
+              position: relative;
+              overflow: hidden;
+              transition: filter 0.3s ease-out;
+              border-radius: .5rem;
+    
+              .loaded .img-responsive {
+                filter: none;
+              }
+    
+    
+              .img-responsive {
+                aspect-ratio: 1 / 1;
+                border-radius: .5rem;
+                box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
+                font-size: 4rem;
+                object-fit: cover;
+                width: 100%;
+                filter: blur(8px);
+                transition: filter 0.3s ease-out;
+              }
+            }
+    
+            .nft-collection-name {
+              color: $gray-color-dark;
+              font-size: .5rem;
+            }
+    
+            .nft-name {
+              font-size: .75rem;
+              font-weight: 700;
+              letter-spacing: -.025em;
+              text-overflow: ellipsis;
+              overflow: hidden;
+              -webkit-box-orient: vertical;
+              -webkit-line-clamp: 2;
+            }
+          }
+        }
+      }
+    }
   }
 
   // POAP Widget
@@ -521,7 +699,7 @@
       width: 1.4rem;
     }
 
-    .widget-collection-list {
+    .widget-poap-list {
       display: flex;
       flex-wrap: nowrap;
       margin: 0 -1rem;
@@ -591,18 +769,6 @@
     position: relative;
     width: 100%;
 
-    .profile-widget-title {
-      .platform-icon {
-        flex: 0 0 1.4rem;
-        height: 1.4rem;
-        width: 1.4rem;
-
-        img {
-          border-radius: .4rem;
-        }
-      }
-    }
-
     .widget-rss-list {
       display: flex;
       flex-wrap: nowrap;
@@ -664,16 +830,6 @@
     width: 100%;
 
     .profile-widget-title {
-      .platform-icon {
-        flex: 0 0 1.4rem;
-        height: 1.4rem;
-        width: 1.4rem;
-
-        img {
-          border-radius: .4rem;
-        }
-      }
-
       .label {
         background: #a855f7;
         box-shadow: inset 0 0 .25rem rgba($dark-color, .15), 0 .1rem .4rem rgba(#a855f7, .5);
@@ -1042,193 +1198,6 @@
           font-weight: 500;
           font-size: .3rem;
           line-height: 1;
-        }
-      }
-    }
-  }
-}
-
-// NFT Collection Switcher
-.collection-switcher {
-  background: $light-color;
-  user-select: none;
-  margin: 0 -1rem;
-  overflow: hidden;
-
-  .collection-list {
-    display: flex;
-    gap: .1rem;
-    overflow: auto hidden;
-    padding: .25rem 1rem;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-
-    .collection-item {
-      background: #fff;
-      border-radius: .6rem;
-      cursor: pointer;
-      flex: 0 0;
-      height: 3.1rem;
-      padding: .25rem;
-      transition: all .25s ease-in-out;
-      width: 3.1rem;
-
-      &::after {
-        bottom: auto;
-        top: 100%;
-        transform: translate(-50%, -$unit-2);
-      }
-
-      &:focus,
-      &:hover {
-        background: lighten($bg-color, 2%);
-
-        &::after {
-          transform: translate(-50%, $unit-1);
-        }
-      }
-
-      &.active {
-        background: $bg-color;
-
-        .img-responsive {
-          box-shadow: 0 .1rem .4rem rgba($dark-color, .25);
-        }
-      }
-
-      .collection-img {
-        border-radius: .5rem;
-        height: 2.6rem;
-        width: 2.6rem;
-
-        &.collection-img-more {
-          .img-responsive {
-            padding: .5rem;
-          }
-        }
-
-        .img-responsive {
-          background: $light-color;
-          border-radius: .5rem;
-          box-shadow: 0 .1rem .4rem rgba($dark-color, .1);
-          color: $dark-color;
-          font-size: 1.6rem;
-          height: 2.6rem;
-          object-fit: cover;
-          width: 2.6rem;
-        }
-      }
-    }
-  }
-}
-
-.nft-collection {
-  position: relative;
-  flex: 1 1;
-  height: 100%;
-  overflow-y: auto;
-  padding: 0 .5rem;
-
-  .nft-collection-list {
-    .nft-collection-item {
-      margin-top: .5rem;
-    }
-
-    .collection-title {
-      align-items: center;
-      display: flex;
-      padding: 1rem 0 .5rem 0;
-
-      .collection-logo {
-        flex: 0 0 1.2rem;
-        margin-right: .25rem;
-
-        .img-responsive {
-          border-radius: .4rem;
-          box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
-          font-size: 1rem;
-          height: 1.2rem;
-          object-fit: cover;
-          width: 1.2rem;
-        }
-      }
-
-      .collection-name {
-        font-size: .8rem;
-        font-weight: 700;
-        letter-spacing: -.025em;
-      }
-    }
-
-    .nft-list {
-      position: relative;
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0 -.5rem 1rem -.5rem;
-
-      .nft-container {
-        flex: 0 0 33.3333%;
-        width: 33.3333%;
-        min-width: 8rem;
-
-        @media screen and (max-width: $size-md) {
-          flex: 0 0 50%;
-        }
-      }
-
-      .nft-item {
-        border-radius: .75rem;
-        padding: .5rem;
-        transition: all .25s ease-in-out;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 2;
-
-        &:focus,
-        &:hover {
-          background: lighten($bg-color, 2%);
-        }
-
-        .nft-img-container {
-          margin-bottom: .5rem;
-          position: relative;
-          overflow: hidden;
-          transition: filter 0.3s ease-out;
-          border-radius: .5rem;
-
-          .loaded .img-responsive {
-            filter: none;
-          }
-
-
-          .img-responsive {
-            aspect-ratio: 1 / 1;
-            border-radius: .5rem;
-            box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
-            font-size: 4rem;
-            object-fit: cover;
-            width: 100%;
-            filter: blur(8px);
-            transition: filter 0.3s ease-out;
-          }
-        }
-
-        .nft-collection-name {
-          color: $gray-color-dark;
-          font-size: .5rem;
-        }
-
-        .nft-name {
-          font-size: .75rem;
-          font-weight: 700;
-          letter-spacing: -.025em;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 2;
         }
       }
     }
