--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -57,7 +57,8 @@
       height: 6rem;
       width: 6rem;
 
-      .avatar {
+      .avatar,
+      .img-responsive {
         height: 6rem;
         width: 6rem;
       }
