Add Markdown support

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1174,6 +1174,14 @@
 
     .nft-header-description {
       font-size: .8rem;
+
+      p {
+        margin-bottom: .5rem;
+      }
+
+      a {
+        text-decoration: underline;
+      }
     }
 
     .nft-header-actions {
