Update search result and graph tooltip

--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -57,7 +57,7 @@ body {
 
 .web3bio-container {
   min-height: 75vh;
-  padding: .5rem;
+  padding: .4rem 0;
   scroll-behavior: smooth;
   width: 100vw;
 }
