--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -40,11 +40,15 @@
     background: #fff;
     border-radius: .4rem;
     box-shadow: 0 .4rem 2rem rgba(0, 0, 0, .5);
-    height: 94%;
-    max-height: 40rem;
-    max-width: 64rem;
+    height: calc(100vh - 3rem);
+    overflow: hidden;
     position: relative;
-    width: 94%;
+    width: calc(100vw - 3rem);
+
+    @media screen and (max-width: $size-sm) {
+      height: calc(100vh - .5rem);
+      width: calc(100vw - .5rem);
+    }
 
     .loading-mask {
       border-radius: .4rem;
